      dbus-x11
    - Update Vcs fields for conversion to git
  * Add debian/gbp.conf
  * Bump Standards-Version to 4.1.2
  * Switch from cdbs to dh
  * Bump debhelper compat to 11
  * Merge dependency changes from Ubuntu:
    - Don't depend on gnome-session-bin
    - Allow xfce4-power-manager as an alternate to gnome-power-manager
  * Drop gnome-screensaver.maintscript, not needed since Wheezy

 -- Jeremy Bicha <jbicha@debian.org>  Mon, 18 Dec 2017 20:13:14 -0500

gnome-screensaver (3.6.1-7) unstable; urgency=medium

  * d/p/0001-gs-lock-plug-Disconnect-signal-handler-from-right-ob.patch:
    Cherry-pick patch from upstream to disconnect a signal from the right
    place.

 -- Iain Lane <iain@orangesquash.org.uk>  Mon, 20 Jul 2015 14:19:35 +0100

gnome-screensaver (3.6.1-6) unstable; urgency=medium

  * debian/patches/01_no_autostart.patch: Only autostart in GNOME Flashback
    sessions (closes: #790632).

 -- Dmitry Shachnev <mitya57@debian.org>  Mon, 13 Jul 2015 13:35:28 +0300

gnome-screensaver (3.6.1-5) unstable; urgency=medium

  * Build against the new systemd library (closes: #779746).
  * Bump Standards-Version to 3.9.6, no changes needed.

 -- Dmitry Shachnev <mitya57@debian.org>  Mon, 06 Jul 2015 17:11:05 +0300

gnome-screensaver (3.6.1-4) unstable; urgency=medium

  * Upload to unstable, not experimental. This fixes RC bug.

 -- Dmitry Shachnev <mitya57@debian.org>  Mon, 15 Dec 2014 13:53:48 +0300

gnome-screensaver (3.6.1-3) experimental; urgency=medium

  * Team upload.

  [ Faidon Liambotis ]
  * Re-enable support for locking the screen on suspend (closes: #773026).
    - Build with systemd support by passing --with-systemd=auto to configure
      and build-depending on libsystemd-login-dev. Use "auto" and a
      [linux-any] dependency to keep compatibility with non-Linux systems.
    - 00git_logind_check.patch from Ubuntu/upstream, to make this dependent on
      just logind, not systemd-as-pid1, as recommended by systemd upstream &