@@ -1,0 +1,1 @@
+debian/source_gnome-screensaver.py /usr/share/apport/package-hooks
