@@ -17,6 +17,7 @@ gnome-screensaver (3.6.1-8) UNRELEASED; urgency=medium
     - Don't depend on gnome-session-bin
     - Allow xfce4-power-manager as an alternate to gnome-power-manager
   * Drop gnome-screensaver.maintscript, not needed since Wheezy
+  * Add apport hook from Ubuntu
 
  -- Jeremy Bicha <jbicha@debian.org>  Mon, 18 Dec 2017 20:13:14 -0500
 
